--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -17,6 +17,7 @@ dataSources:
       language: wasm/assemblyscript
       entities:
         - Event
+        - Field
       abis:
         - name: Exchange
           file: ./abis/Exchange.json
